fix: add margin body but not work normalize

--- a/shelter/sass/style.scss
+++ b/shelter/sass/style.scss
@@ -1,5 +1,5 @@
 //Abstract
-@import "../node_modules/normalize.css/normalize.css";
+@import "normalize.css";
 @import "abstract/constants";
 @import "abstract/placeholders";
 @import "abstract/mixins.scss";
