--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -1,4 +1,4 @@
-@import "../node_modules/normalize.css/normalize.css";
+@import "normalize.css";
 .slider-icon-next:hover, .slider-icon-next, .slider-icon-prev:hover, .slider-icon-prev, .header__link-lite, .header__link, .navigation__link-lite:hover, .navigation__link:hover, .navigation__link-lite, .navigation__link {
   transition: all 0.3s ease-out;
 }
@@ -35,6 +35,7 @@ body {
   font-style: normal;
   font-weight: normal;
   line-height: 2.4rem;
+  margin: 0 auto;
 }
 
 h1 {
