--- a/shelter/sass/style.scss
+++ b/shelter/sass/style.scss
@@ -1,5 +1,5 @@
 //Abstract
-@import "normalize.css";
+@import "normalize.css/normalize.css";
 @import "abstract/constants";
 @import "abstract/placeholders";
 @import "abstract/mixins.scss";
