--- a/shelter/sass/component/_navigation.scss
+++ b/shelter/sass/component/_navigation.scss
@@ -1,3 +1,31 @@
+.header__navigation {
+    @include media-tabletmin {
+        width: 320px;
+        height: 823px;
+        position: fixed;
+        top: 0;
+        right: 0;
+        background: #292929;
+        transform: translateX(100%);
+        transition: all 0.5s linear;
+        
+    }
+    @include media-mobilesmall {
+        width: 100%;
+        height: 100%;
+    }
+}
+.header__navigation_activ {
+    @include media-tabletmin {
+        transform: translateX(0);
+        box-shadow: -447px 0px 847px 300px rgba(38, 37, 37);
+        
+    }
+    @include media-mobilesmall {
+        width: 100%;
+        height: 100%;
+    }
+}
 .header__link {
     text-decoration: none;
     color: #CDCDCD;
@@ -12,6 +40,9 @@
     cursor: pointer;
     @extend %transition;
     scroll-behavior: smooth;
+    @include media-tabletmin {
+        color: #CDCDCD;
+    }
 }
 .header__link:hover {
     color: $color-link-hover-lite;
@@ -26,6 +57,10 @@
 .header__link-lite_activ {
     color: #545454;
     border-bottom: 3px solid $color-primari;
+    @include media-tabletmin {
+        color: $color-link-hover-lite;
+        margin-left: 0;
+    }
 } 
 .header__link:first-child {
     padding-left: 0;
