--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -112,7 +112,13 @@
     color: $color-text-lite;
     padding-left: 0;
     @include media-tabletmin {
-        display: none;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 40px;
+        font-size: 32px;
+        line-height: 160%;
+        margin: 248px 38px;
     }
 }
 .navigation__link {
@@ -122,6 +128,10 @@
     @extend %transition;
     scroll-behavior: smooth;
     letter-spacing: normal;
+    @include media-tabletmin {
+        width: 100%;
+        margin-left: 0;
+    }
 }
 .navigation__link-lite {
     list-style: none;
