--- a/minesweeper/style.css
+++ b/minesweeper/style.css
@@ -1,31 +1,6 @@
 .body {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #f8eeee;
+  font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
-}
-.grid-wrap {
-  max-width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.grid {
-  background: gray;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 100%;
-}
-.cell {
-  flex: 0 0 40px;
-  height: 40px;
-  font-size: 24px;
-  border: 2px solid #ccc9c9;
-  box-sizing: border-box;
 }
 
 .title {
@@ -35,6 +10,21 @@
   text-align: center;
   color: #303075;
 }
-.cell:hover {
-  background-color: #b3b0b0;
+
+.grid-wrap {
+  margin: 0 auto;
+  width: 500px;
 }
+
+.grid {
+  height: 400px;
+  width: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #5dbe72;
+  margin-left: 50px;
+  margin-top: 20px;
+  border: 10px solid #b0f0b0;
+  margin-bottom: 10px;
+}
+
