--- a/minesweeper/style.css
+++ b/minesweeper/style.css
@@ -28,3 +28,13 @@
   margin-bottom: 10px;
 }
 
+.cell {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #b0f0b0;
+  box-sizing: border-box;
+}
+
+.bomb {
+  background: yellow;
+}
